Force merge on clone in snapshot